samples/_failures_safe/1761689416_de2748_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_adb3e933.c: In function ‘main’:
./samples/SAFE/__tmp_adb3e933.c:137:38: error: ‘sample_data’ undeclared (first use in this function); did you mean ‘sample_data3’?
  137 |     if (!add_compression_block(&ctx, sample_data
      |                                      ^~~~~~~~~~~
      |                                      sample_data3
./samples/SAFE/__tmp_adb3e933.c:137:38: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_adb3e933.c:137:49: error: expected ‘)’ at end of input
  137 |     if (!add_compression_block(&ctx, sample_data
      |                               ~                 ^
      |                                                 )
./samples/SAFE/__tmp_adb3e933.c:137:10: error: too few arguments to function ‘add_compression_block’
  137 |     if (!add_compression_block(&ctx, sample_data
      |          ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_adb3e933.c:72:5: note: declared here
   72 | int add_compression_block(struct CompressionContext *ctx, const uint8_t *data, uint32_t size) {
      |     ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_adb3e933.c:137:5: error: expected declaration or statement at end of input
  137 |     if (!add_compression_block(&ctx, sample_data
      |     ^~
